[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/chat/messageinput.gd" type="Script" id=1]
[ext_resource path="res://scenes/chat/messagescontainer.gd" type="Script" id=2]
[ext_resource path="res://scenes/chat/SendButton.gd" type="Script" id=3]
[ext_resource path="res://scenes/chat/ScrollContainer.gd" type="Script" id=4]

[node name="Chat" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tmpbg" type="ColorRect" parent="."]
margin_left = 3.0
margin_top = -3.0
margin_right = 1027.0
margin_bottom = 597.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.254902, 0.254902, 0.254902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 20.0
margin_right = -40.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 944.0
margin_bottom = 560.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 944.0
margin_bottom = 526.0
size_flags_vertical = 3

[node name="PlayerList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_right = 47.0
margin_bottom = 526.0

[node name="tmpplayer" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PlayerList"]
margin_right = 47.0
margin_bottom = 14.0
text = "andrzej"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 944.0
margin_bottom = 526.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="MessagesContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer"]
margin_right = 944.0
margin_bottom = 526.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="tmpmsg" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/MessagesContainer"]
margin_right = 944.0
margin_bottom = 14.0
text = "testmessage (label)"

[node name="MessageEditor" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 530.0
margin_right = 944.0
margin_bottom = 560.0

[node name="MessageInput" type="TextEdit" parent="MarginContainer/VBoxContainer/MessageEditor"]
margin_right = 897.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="SendButton" type="Button" parent="MarginContainer/VBoxContainer/MessageEditor"]
margin_left = 901.0
margin_right = 944.0
margin_bottom = 30.0
text = "send"
script = ExtResource( 3 )
[connection signal="message_added" from="MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/MessagesContainer" to="MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer" method="_on_message_added"]
[connection signal="send_text" from="MarginContainer/VBoxContainer/MessageEditor/MessageInput" to="MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/MessagesContainer" method="add_message"]
[connection signal="send_button_pressed" from="MarginContainer/VBoxContainer/MessageEditor/SendButton" to="MarginContainer/VBoxContainer/MessageEditor/MessageInput" method="_send_text"]
